test/integration/bad/embedded_laplace/bad_forward8.stan
model {
  1 ~ laplace_marginal_tol_neg_binomial_2_log(1, 1);
}
